--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -5,11 +5,11 @@ basics:
   email: utkubugrayil@gmail.com
   phone: "+90 505 640 1843"
   url: https://utkubugrayilmaz.github.io
-  summary: "Computer Engineer specializing in Artificial Intelligence, Backend Development, and Embedded Systems. Experienced in building high-performance ML models for FinTech, autonomous drone systems, and secure IoT solutions. Passionate about bridging the gap between software and hardware."
   location:
     city: Ankara
     countryCode: TR
     region: Turkey
+  summary: "Computer Engineer specializing in Artificial Intelligence, Backend Development, and Embedded Systems."
   profiles:
     - network: LinkedIn
       username: Utku Buğra Yılmaz
@@ -17,105 +17,58 @@ basics:
     - network: GitHub
       username: utkubugrayilmaz
       url: https://github.com/utkubugrayilmaz
-    - network: Medium
-      username: Medium Profile
-      url: https://medium.com/
 
 work:
-  - name: Freelance
+  - name: Noykara
     position: Machine Learning & Backend Engineer
-    startDate: 2025-09-01
-    endDate: 2025-10-01
+    startDate: "2025-09-01"
+    endDate: "2025-10-01"
     summary: "Remote | Developed AI-driven financial analysis systems."
     highlights:
-      - "Developed a machine learning model for BIST100 stocks producing signals with ~0.67 Weighted F1-Score and 0.97 Sharpe ratio."
-      - "Built backend infrastructure with FastAPI, PostgreSQL, and Docker."
-      - "Implemented multilingual news summarization using DeepSeek LLM."
-      - "Produced professional MLOps documentation including Model Cards and runbooks."
+      - "Developed a ML model for BIST100 stocks (0.67 F1-Score)."
+      - "Built backend infrastructure with FastAPI and Docker."
+      - "Implemented DeepSeek LLM for news summarization."
 
   - name: Giresun University IT Department
     position: Part-Time Software Engineer
-    startDate: 2024-09-01
-    endDate: 2025-06-01
+    startDate: "2024-09-01"
+    endDate: "2025-06-01"
     summary: "Giresun, Turkey | Research on data security."
     highlights:
-      - "Researched novel metaheuristic algorithms and developed innovative steganography methods."
-      - "Used MATLAB, Python (OpenCV/Scikit-learn) and Cryptographic Libraries."
+      - "Researched novel metaheuristic algorithms."
+      - "Developed steganography methods using Python."
 
   - name: MAN Türkiye A.Ş
     position: Software Development Intern
-    startDate: 2023-07-01
-    endDate: 2023-08-01
+    startDate: "2023-07-01"
+    endDate: "2023-08-01"
     summary: "Ankara, Turkey | Automotive software development."
     highlights:
-      - "Developed backend systems using C# and SQL in the R&D department."
-      - "Configured and tested AUTOSAR stacks (BSW modules) for automotive embedded systems."
-
-  - name: Giresun University IT Department
-    position: Software Development Intern
-    startDate: 2024-07-01
-    endDate: 2024-08-01
-    summary: "Giresun, Turkey"
-    highlights:
-      - "Developed a Face Recognition & Emotion Analysis System achieving 87% accuracy."
-
-  - name: Superprof
-    position: Online Tutor (Math & Software)
-    startDate: 2023-04-01
-    endDate: 2025-11-24 # Present
-    summary: "Remote | Mentored 15+ students."
-    highlights:
-      - "Taught Python, Java, Algorithms, and Calculus."
-
-  - name: Bionluk / Fiverr
-    position: Freelance Game Developer
-    startDate: 2022-01-01
-    endDate: 2025-11-24 # Present
-    summary: "Remote | Delivered 50+ projects."
-    highlights:
-      - "Developed Unity-based games and provided coding tutorials."
-      - "Maintained a 4.9/5 client satisfaction rating."
+      - "Developed backend systems using C# and SQL."
+      - "Tested AUTOSAR stacks for embedded systems."
 
 education:
   - institution: Giresun University
     area: Computer Engineering (BSc)
     studyType: Bachelor
-    startDate: 2021-10-01
-    endDate: 2025-06-01
+    startDate: "2021-10-01"
+    endDate: "2025-06-01"
     score: "3.26/4.00"
-  - institution: Ankara Akyurt Anadolu High School
-    area: High School
-    startDate: 2016-09-01
-    endDate: 2020-06-01
 
 projects:
   - name: PostaX
-    description: ML-Enhanced Smart Mail System (Graduation Project)
+    description: ML-Enhanced Smart Mail System
     highlights:
-      - "IoT system with Arduino & ESP32CAM using Master-Slave architecture."
-      - "Anomaly detection for unauthorized access prevention."
-      - "Tech: Arduino, ESP32, RFID, ML, Computer Vision."
-    url: https://utkubugrayilmaz.github.io/projects/
+      - "IoT system with Arduino & ESP32CAM."
+      - "Anomaly detection for unauthorized access."
+    url: "https://utkubugrayilmaz.github.io/projects/"
 
   - name: Aytar Drone
     description: Autonomous Search & Rescue Drone
     highlights:
       - "Teknofest Semi-Finalist (90/100 Score)."
-      - "Voice recognition system using MFCC analysis for emergency signals."
-      - "Tech: Python, SpeechRecognition, OpenCV, MFCC."
-    url: https://utkubugrayilmaz.github.io/projects/
-
-  - name: Steganography Research
-    description: Novel Method Development
-    highlights:
-      - "Developing a new steganography method to enhance data security in digital images."
-      - "Tech: Python, OpenCV, Cryptographic Libraries."
-
-  - name: Metaheuristic Optimization
-    description: Research Project
-    highlights:
-      - "Working on the development of a new metaheuristic optimization algorithm."
-      - "Tech: MATLAB, Python."
+      - "Voice recognition system using MFCC analysis."
+    url: "https://utkubugrayilmaz.github.io/projects/"
 
 skills:
   - name: AI & Data Science
@@ -124,11 +77,7 @@ skills:
       - Python
       - LightGBM
       - TensorFlow
-      - Scikit-learn
       - OpenCV
-      - Pandas
-      - DeepSeek LLM
-      - SHAP
 
   - name: Backend & DevOps
     level: Advanced
@@ -137,8 +86,6 @@ skills:
       - Docker
       - PostgreSQL
       - Git
-      - REST APIs
-      - MLOps
 
   - name: Hardware
     level: Intermediate
@@ -146,42 +93,17 @@ skills:
       - Arduino
       - ESP32
       - Raspberry Pi
-      - Embedded Systems
 
-  - name: Languages
-    level: Intermediate
-    keywords:
-      - Turkish (Native)
-      - English (B2)
-      - German (A1)
+languages:
+  - language: Turkish
+    fluency: Native
+  - language: English
+    fluency: B2
 
-# TARİH FORMATI HATASI BURADAYDI. ŞİMDİ DÜZELTİLDİ.
 certificates:
-  - name: Autosar Architecture (Learn from Scratch)
-    date: 2024-01-01
-    issuer: Udemy
+  - name: Autosar Architecture
+    date: "2024-01-01"
     url: ""
   - name: Advanced Python Programming
-    date: 2023-01-01
-    issuer: Udemy
-    url: ""
-  - name: Complete Java Developer Course
-    date: 2023-01-01
-    issuer: Udemy
-    url: ""
-  - name: Ethical Hacking with Kali Linux
-    date: 2023-01-01
-    issuer: Udemy
-    url: ""
-  - name: Unity Game Engine Course
-    date: 2022-01-01
-    issuer: Udemy / GameDev.tv
-    url: ""
-  - name: Introduction to Game Development (CS50)
-    date: 2022-01-01
-    issuer: HarvardX
-    url: ""
-  - name: Python Bootcamp
-    date: 2022-01-01
-    issuer: Global AI Hub
+    date: "2023-01-01"
     url: ""
