--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -8,7 +8,7 @@ cv_pdf: assets/pdf/utku-bugra-yilmaz-cv.pdf
 # İletişim Bilgilerin
 email: utkubugrayil@gmail.com
 github_username: utkubugrayilmaz
-linkedin_username: utku-bugra-yilmaz
+linkedin_username: utkubuğrayılmaz
 medium_username: utkubugrayil
 
 # -----------------------------------------------------------------------------
