--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -14,6 +14,10 @@ medium_username: utkubugrayil
 # -----------------------------------------------------------------------------
 # Kapatılan / Kullanılmayan Özellikler (Einstein ve Gereksizler)
 # -----------------------------------------------------------------------------
+custom_social:
+  title: Bionluk
+  url: https://bionluk.com/utkubugrayilmaz
+  logo: assets/img/bionluk.png  # Senin yüklediğin dosya
 # Aşağıdaki satırların başında # olduğu için sitede görünmezler.
 
 # inspirehep_id: 1010907
