--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -16,7 +16,7 @@ medium_username: utkubugrayil
 # -----------------------------------------------------------------------------
 custom_social:
   title: Bionluk
-  url: https://bionluk.com/utkubugrayilmaz
+  url: https://bionluk.com/imthebug
   logo: assets/img/bionluk.png  # Senin yüklediğin dosya
 # Aşağıdaki satırların başında # olduğu için sitede görünmezler.
 
