--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,13 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - utkubugrayilmaz
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - utkubugrayilmaz/DepremBildirimi
+  - utkubugrayilmaz/chess
+  - utkubugrayilmaz/Face-Emotion-Recognition-with-Face-Attendance-System
+  - utkubugrayilmaz/Database-Control-System
+  - utkubugrayilmaz/Trendyol-E-Commerce-Seller-Panel
+  - utkubugrayilmaz/Stock-Market-Tracking-System
+  - utkubugrayilmaz/Student-Registration-System
