--- a/_config.yml
+++ b/_config.yml
@@ -123,13 +123,10 @@ giscus:
 disqus_shortname: al-folio
 
 # External sources
+# External sources
 external_sources:
   - name: medium.com
     rss_url: https://medium.com/@utkubugrayil/feed
-  - name: Google Blog
-    posts:
-      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        published_date: 2024-05-14
 
 # -----------------------------------------------------------------------------
 # Newsletter
