--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,6 @@ back_to_top: true # set to false to disable the back to top button
 # Theme
 # -----------------------------------------------------------------------------
 
-# repo color theme
 repo_theme_light: default
 repo_theme_dark: dark
 repo_trophies:
@@ -36,25 +35,13 @@ repo_trophies:
   theme_dark: gitdimmed
 
 # -----------------------------------------------------------------------------
-# Social Integration (SOSYAL MEDYA AYARLARIN BURADA)
+# Social Integration
 # -----------------------------------------------------------------------------
 
 email: utkubugrayil@gmail.com
 github_username: utkubugrayilmaz
-linkedin_username: utku-bugra-yilmaz  # LinkedIn linkin genelde Türkçe karakter içermez, resume'deki gibi düzelttim.
+linkedin_username: utkubugrayilmaz
 medium_username: utkubugrayil
-
-# Aşağıdakileri boşalttım ki Einstein veya gereksiz ikonlar çıkmasın:
-google_scholar_id:
-scholar_userid:
-inspirehep_id:
-orcid_id:
-research_gate_profile:
-twitter_username:
-mastodon_username:
-keybase_username:
-instagram_url: # İstemediğin için boş bıraktım
-
 rss_icon: false
 
 # -----------------------------------------------------------------------------
@@ -67,8 +54,6 @@ search_enabled: true
 socials_in_search: true
 posts_in_search: true
 bib_search: true
-
-# Dimensions
 max_width: 930px
 
 # -----------------------------------------------------------------------------
@@ -92,12 +77,11 @@ bing_site_verification:
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: blog
+blog_name: Blog
 blog_description: My notes on Artificial Intelligence, Backend, and Technology.
 permalink: /blog/:year/:title/
 lsi: false
 
-# Pagination
 pagination:
   enabled: true
 
@@ -105,7 +89,6 @@ related_blog_posts:
   enabled: true
   max_related: 5
 
-# Giscus comments
 giscus:
   repo: 
   repo_id: 
@@ -122,7 +105,6 @@ giscus:
 
 disqus_shortname: al-folio
 
-# External sources
 # External sources
 external_sources:
   - name: medium.com
@@ -190,7 +172,6 @@ keep_files:
   - CNAME
   - .nojekyll
 
-# Plug-ins
 plugins:
   - jekyll-archives-v2
   - jekyll-email-protect
@@ -328,7 +309,6 @@ enable_video_embedding: false
 
 third_party_libraries:
   download: false
-  # (Kütüphane kodları uzun yer kaplamaması için özetlendi, orijinaliyle aynıdır)
   bootstrap-table:
     integrity:
       css: "sha256-uRX+PiRTR4ysKFRCykT8HLuRCub26LgXJZym3Yeom1c="
@@ -337,9 +317,6 @@ third_party_libraries:
       css: "https://cdn.jsdelivr.net/npm/bootstrap-table@{{version}}/dist/bootstrap-table.min.css"
       js: "https://cdn.jsdelivr.net/npm/bootstrap-table@{{version}}/dist/bootstrap-table.min.js"
     version: "1.22.4"
-  # Diğer kütüphaneler (chartjs, d3, vb.) buraya gelecek... 
-  # NOT: Senin orijinal dosyanın bu kısmı doğruydu, burayı değiştirmene gerek yok ama
-  # temiz olsun diye hepsini kopyalaman için aşağıya tüm listeyi sığdırıyorum:
   chartjs:
     integrity:
       js: "sha256-0q+JdOlScWOHcunpUk21uab1jW7C1deBQARHtKMcaB4="
@@ -555,6 +532,7 @@ third_party_libraries:
 # -----------------------------------------------------------------------------
 # Data Loading
 # -----------------------------------------------------------------------------
+
 jsonresume:
   - work
   - education
