--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -3,70 +3,74 @@ basics:
   label: Computer Engineer | AI & Backend Developer
   image: assets/img/utku-bugra-yilmaz-ai-engineer.jpg
   email: utkubugrayil@gmail.com
-  phone: "+90 505 640 1843"
   url: https://utkubugrayilmaz.github.io
   location:
     city: Ankara
     countryCode: TR
     region: Turkey
-  summary: "Computer Engineer specializing in Artificial Intelligence, Backend Development, and Embedded Systems. Experienced in building high-performance ML models for FinTech, autonomous drone systems, and secure IoT solutions."
+  summary: "Computer Engineer specializing in Artificial Intelligence, Backend Development, and Embedded Systems. Experienced in building high-performance ML models for FinTech, autonomous drone systems, and secure IoT solutions. Passionate about bridging the gap between theoretical AI and production-grade software."
   profiles:
     - network: LinkedIn
       username: Utku Buğra Yılmaz
-      url: https://www.linkedin.com/in/utku-bugra-yilmaz/
+      url: https://www.linkedin.com/in/utkubugrayilmaz/
     - network: GitHub
       username: utkubugrayilmaz
       url: https://github.com/utkubugrayilmaz
     - network: Medium
       username: Medium
-      url: https://medium.com/
+      url: https://medium.com/@utkubugrayil
+    - network: Bionluk
+      username: Bionluk
+      url: https://bionluk.com/utkubugra
 
 work:
   - name: Freelance FinTech Project
     position: Machine Learning & Backend Engineer
     startDate: "2025-09-01"
     endDate: "2025-10-01"
-    summary: "Remote | Developed AI-driven financial analysis systems."
+    summary: "Remote | Developed an end-to-end AI-driven financial analysis system."
     highlights:
-      - "Developed a ML model for BIST100 stocks achieving ~0.67 Weighted F1-Score."
-      - "Built scalable backend infrastructure with FastAPI, PostgreSQL, and Docker."
-      - "Integrated DeepSeek LLM for automated multilingual news summarization."
+      - "Developed a high-performance ML model (LightGBM) for BIST100 stocks, achieving ~0.67 Weighted F1-Score and strong backtest returns."
+      - "Built scalable backend infrastructure with FastAPI, PostgreSQL, and Docker using Batch Processing for 45% faster inference."
+      - "Integrated DeepSeek LLM for automated multilingual (TR, EN, DE, KO) news summarization and sentiment analysis."
+      - "Implemented professional MLOps practices including Model Cards, Data Dictionaries, and Runbooks."
 
   - name: Giresun University IT Department
     position: Part-Time Software Engineer
     startDate: "2024-09-01"
     endDate: "2025-06-01"
-    summary: "Giresun, Turkey | Research on data security and algorithms."
+    summary: "Giresun, Turkey | R&D on Data Security & Algorithms."
     highlights:
-      - "Researched novel metaheuristic algorithms for optimization problems."
-      - "Developed innovative steganography methods using Python and OpenCV."
-
-  - name: MAN Türkiye A.Ş
-    position: Software Development Intern
-    startDate: "2023-07-01"
-    endDate: "2023-08-01"
-    summary: "Ankara, Turkey | Automotive software development."
-    highlights:
-      - "Developed backend systems using C# and SQL in the R&D department."
-      - "Configured and tested AUTOSAR stacks (BSW modules) for embedded systems."
+      - "Researched novel metaheuristic algorithms (SFOA) for complex optimization problems."
+      - "Developed innovative steganography methods for secure data transmission using Python and OpenCV."
 
   - name: Giresun University IT Department
     position: Software Development Intern
     startDate: "2024-07-01"
     endDate: "2024-08-01"
-    summary: "Giresun, Turkey | Computer Vision Project."
+    summary: "Giresun, Turkey | Computer Vision & AI."
     highlights:
-      - "Developed a Face Recognition & Emotion Analysis System with custom-trained CNN."
-      - "Achieved 87% accuracy in real-time emotion detection."
+      - "Developed a Real-time Face Recognition & Emotion Analysis System with a custom-trained CNN model."
+      - "Achieved 87% accuracy in emotion detection and integrated it with an automated attendance system."
+
+  - name: MAN Türkiye A.Ş
+    position: Software Development Intern
+    startDate: "2023-07-01"
+    endDate: "2023-08-01"
+    summary: "Ankara, Turkey | Automotive R&D."
+    highlights:
+      - "Developed backend systems (C# & SQL) for managing Trendyol E-Commerce Seller Panel orders."
+      - "Created a Database Control System simulating bus part inspections with version control."
+      - "Gained hands-on experience with AUTOSAR stacks (BSW modules) and ECU integration."
 
   - name: Freelance Developer & Tutor
     position: Bionluk / Superprof
     startDate: "2022-01-01"
-    endDate: "2025-11-24" # Present
-    summary: "Remote | Game Development & Programming Tutoring."
+    endDate: "2025-11-24" 
+    summary: "Remote | Software Development & Mentorship."
     highlights:
-      - "Delivered 50+ projects in game development (Unity) and automation scripts."
-      - "Mentored 15+ students in Python, Java, and Algorithms."
+      - "Delivered 50+ projects in game development (Unity), Python automation, and algorithms."
+      - "Mentored 15+ students in Python, Java, Mathematics, and Physics."
 
 education:
   - institution: Giresun University
@@ -83,54 +87,85 @@ education:
     endDate: "2020-06-01"
 
 projects:
-  - name: PostaX
-    description: ML-Enhanced Smart Mail System (Graduation Project)
+  - name: End-to-End Financial Prediction Platform
+    description: "AI-Powered Stock Analysis & News Intelligence"
     highlights:
-      - "IoT system with Arduino & ESP32CAM using Master-Slave architecture."
-      - "Anomaly detection algorithms for unauthorized access prevention."
-    url: "https://utkubugrayilmaz.github.io/projects/"
+      - "BIST100 Buy/Sell signal generation using LightGBM & Triple Barrier Method."
+      - "Multilingual News Analysis API using DeepSeek LLM (TR/EN/DE/KO)."
+      - "Scalable FastAPI backend with Docker & PostgreSQL."
+    url: "https://github.com/utkubugrayilmaz" 
+
+  - name: PostaX (Graduation Project)
+    description: "IoT & AI Enhanced Smart Secure Mail System"
+    highlights:
+      - "Secure delivery system with Telegram OTP (One-Time Password) integration."
+      - "Offline Failover Mode: Works with pre-generated keys during internet outages."
+      - "Real-time monitoring via ESP32-CAM and TinyML based anomaly detection."
+    url: "https://github.com/utkubugrayilmaz"
+
+  - name: Deprem Bildirim Botu
+    description: "Real-time Earthquake Notification System"
+    highlights:
+      - "Telegram bot providing instant earthquake data via Kandilli Observatory API."
+      - "High-performance asynchronous architecture (Async/Await) with caching."
+      - "Location-based custom alerts and historical data querying with AioSQLite."
+    url: "https://github.com/utkubugrayilmaz/DepremBildirimi"
 
   - name: Aytar Drone
-    description: Autonomous Search & Rescue Drone
+    description: "Autonomous Search & Rescue Drone (Teknofest Semi-Finalist)"
     highlights:
-      - "Teknofest Semi-Finalist (90/100 Score)."
-      - "Voice recognition system using MFCC analysis for emergency signals."
-    url: "https://utkubugrayilmaz.github.io/projects/"
+      - "Voice recognition system using MFCC analysis to detect human cries."
+      - "Multilingual NLP module (TR/EN/FR/ES) for emergency keyword detection."
+      - "Estimated GPS positioning based on sound source direction."
+    url: "https://github.com/utkubugrayilmaz"
 
-  - name: Face Emotion Recognition
-    description: Internship Project
+  - name: Face Emotion Recognition System
+    description: "Computer Vision Internship Project"
     highlights:
-      - "Real-time emotion analysis system using custom CNN architecture."
-      - "Integrated with automated attendance tracking system."
+      - "Custom CNN architecture achieving 87% accuracy in real-time emotion detection."
+      - "Automated attendance tracking integration."
+    url: "https://github.com/utkubugrayilmaz"
+
+  - name: Trendyol E-Commerce Panel
+    description: "Order Management System (Internship Project)"
+    highlights:
+      - "Developed for MAN Türkiye to manage e-commerce orders efficiently."
+      - "Customer tracking and order creation modules using C# and SQL."
+    url: "https://github.com/utkubugrayilmaz"
 
 skills:
   - name: AI & Data Science
     level: Advanced
     keywords:
-      - Python
-      - LightGBM
-      - TensorFlow
-      - Scikit-learn
-      - OpenCV
-      - Pandas
+      - Python (Advanced)
+      - LightGBM / XGBoost / CatBoost
+      - Deep Learning (CNN, LSTM, Bi-LSTM)
+      - Time Series (TFT)
+      - Computer Vision (OpenCV)
+      - NLP (LLM Integration)
+      - TensorFlow / Keras
+      - Scikit-learn / Pandas
+      - Explainable AI (SHAP)
 
   - name: Backend & DevOps
     level: Advanced
     keywords:
-      - FastAPI
+      - FastAPI (Async)
+      - RESTful APIs
+      - PostgreSQL / SQL
       - Docker
-      - PostgreSQL
-      - Git
-      - REST APIs
-      - MLOps
+      - Git / GitHub Actions
+      - MLOps (MLflow)
+      - Rate Limiting (SlowAPI)
 
-  - name: Hardware
+  - name: Hardware & IoT
     level: Intermediate
     keywords:
-      - Arduino
-      - ESP32
+      - Arduino (I2C/UART)
+      - ESP32 / ESP32-CAM
       - Raspberry Pi
-      - Embedded Systems
+      - Embedded AI (TinyML)
+      - Telegram Bot API
 
 languages:
   - language: Turkish
@@ -141,27 +176,15 @@ languages:
     fluency: A1 - Beginner
 
 certificates:
-  - name: CS50's Introduction to Programming with Python
-    date: "2024-01-01"
-    issuer: HarvardX
-    url: "" # Varsa sertifika linkini ekle
-  
   - name: Autosar Architecture & Automotive Software
     date: "2024-01-01"
     issuer: Udemy
-    url: ""
-
   - name: Python Bootcamp & AI Introduction
     date: "2023-01-01"
     issuer: Global AI Hub
-    url: ""
-
   - name: CS50's Introduction to Game Development
     date: "2023-01-01"
     issuer: HarvardX
-    url: ""
-
   - name: Ethical Hacking with Kali Linux
     date: "2023-01-01"
     issuer: Udemy
-    url: ""
