--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ repo_trophies:
 email: utkubugrayil@gmail.com
 github_username: utkubugrayilmaz
 linkedin_username: utkubugrayilmaz
-medium_username: @utkubugrayil
+medium_username: '@utkubugrayil'
 rss_icon: false
 
 # -----------------------------------------------------------------------------
